--- a/wiki/Cables_Workbench.html
+++ b/wiki/Cables_Workbench.html
@@ -11,9 +11,8 @@
 </p><p>This toolset can be used to create electrical boxes or other ready to use electrical elements (the element list will hopefully be expanded in the future). These elements can be connected with fully parametric cables of different profiles, number of wires and thicknesses. There are a few predefined cable profiles here, but there is also possibility to create custom non standard profiles with a simple csv file.
 </p><p>Models built with this workbench allow easy repositioning of elements without breaking connections. Cables can adjust their shape to new positions. However, this feature is not perfect yet.
 </p><p>The workbench aims to be compatible with <a href="BIM_Workbench.html" title="BIM Workbench">BIM Workbench</a> (solid objects created here should have the same base attributes and properties as other BIM objects: materials, IFC type and IFC attributes etc.), but it can be used for purposes other than architectural designs. Since <span style="color:blue;">version 0.3.0</span> the workbench became also more suitable for modeling connections between PCBs, inside machines etc. It allows to build custom libraries of connectors, boxes and electrical devices (any help in creating, for example, a set of ready-made connectors is very welcome).
-</p><p>Compatibility table of current release of Cables Workbench: <a href="Cables_Compatibility_with_BIM_Workbench.html" title="Cables Compatibility with BIM Workbench">Compatibility with BIM Workbench</a>.
-</p><p><br>
-<span class="mw-default-size" typeof="mw:File"><a href="index.php?title=Cables_Example3.png&amp;filetimestamp=20250216055419&amp;.html" class="mw-file-description"><img src="File/Cables_Example3.png" decoding="async" width="600" height="337" class="mw-file-element" data-file-width="600" data-file-height="337"></a></span>
+</p><p>For a compatibility table for the current release of the Cables Workbench see: <a href="Cables_Compatibility_with_BIM_Workbench.html" title="Cables Compatibility with BIM Workbench">Compatibility with BIM Workbench</a>.
+</p><p><span class="mw-default-size" typeof="mw:File"><a href="index.php?title=Cables_Example3.png&amp;filetimestamp=20250216055419&amp;.html" class="mw-file-description"><img src="File/Cables_Example3.png" decoding="async" width="600" height="337" class="mw-file-element" data-file-width="600" data-file-height="337"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Example of wall mounted boxes and cable<br>Animated version <a href="Cables_Example1_Simple_workflow.html" title="Cables Example1 Simple workflow">here</a></p>
 <p><span typeof="mw:File"><a href="index.php?title=Cables_Example1.png&amp;filetimestamp=20251022163000&amp;.html" class="mw-file-description"><img src="File/Cables_Example1.png" decoding="async" width="600" height="400" class="mw-file-element" data-file-width="600" data-file-height="400"></a></span>
@@ -96,12 +95,12 @@
 <li>Report bugs: Please report bugs <a rel="nofollow" class="external text" href="https://github.com/sargo-devel/Cables/issues">here</a></li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260117154333
+Cached time: 20260125104343
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.116 seconds
-Real time usage: 0.281 seconds
+CPU time usage: 0.093 seconds
+Real time usage: 0.113 seconds
 Preprocessor visited node count: 247/1000000
 Post&#8208;expand include size: 2840/2097152 bytes
 Template argument size: 436/2097152 bytes
@@ -112,12 +111,12 @@ Unstrip post&#8208;expand size: 1209/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.095      1 -total
- 60.36%    3.679      3 Template:Caption
- 34.60%    2.109      1 Template:TOCright
+100.00%    3.138      1 -total
+ 64.82%    2.034      3 Template:Caption
+ 28.62%    0.898      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:370931-0!canonical and timestamp 20260117154328 and revision id 1739600. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:370931-0!canonical and timestamp 20260125104344 and revision id 1743742. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
