--- a/wiki/fr/TechDraw_ExtensionCreateVertCoordDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCreateVertCoordDimension.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionCreateVertCoordDimension/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionCreateVertCoordDimension&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionCreateVertCoordDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungVertikaleKoordinatenma&szlig;e (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionCreateVertCoordDimension.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionCreateVertCoordDimension (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ExtensionCreateVertCoordDimension.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw&#720; Quote in Parallelo Verticali (78% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_ExtensionCreateVertCoordDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Seria wymiar&oacute;w kaskadowych pionowo (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
@@ -58,16 +58,14 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>Sp&eacute;cifiez &agrave; votre convenance les attributs de ligne avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
+<ol><li>Vous pouvez modifier les attributs de ligne avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
 <li>S&eacute;lectionnez trois sommets ou plus.</li>
 <li>L'ordre de s&eacute;lection des deux premiers sommets d&eacute;termine la position de la ligne de base. Si le premier sommet s&eacute;lectionn&eacute; se trouve sous le second, la ligne de base est cr&eacute;&eacute;e au sommet le plus bas, sinon elle est cr&eacute;&eacute;e au sommet le plus haut.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li><span style="font-size:small;"><a href="../fr/Release_notes_1.0.html" title="Release notes 1.0/fr">introduit dans la version 1.0</a></span>&nbsp;: si la <a href="../fr/TechDraw_Preferences.html#Cotes" title="TechDraw Preferences/fr">pr&eacute;f&eacute;rence</a> <b>Outils de cotation</b> est r&eacute;gl&eacute;e sur <code>Outil unique</code> (par d&eacute;faut)&nbsp;: appuyez sur la fl&egrave;che vers le bas &agrave; droite du bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=TechDraw_Dimension.svg&amp;filetimestamp=20241126214027&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> et s&eacute;lectionnez l'option <b><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateHorizChainDimension.svg&amp;filetimestamp=20240707201554&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateHorizChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cotes horizontales</b> du menu d&eacute;roulant.</li>
 <li>Si cette pr&eacute;f&eacute;rence a une valeur diff&eacute;rente (et dans <span style="font-size:small;color:blue;">version 0.21 et pr&eacute;c&eacute;dentes</span>)&nbsp;: appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateVertCoordDimension.svg&amp;filetimestamp=20240707202244&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateVertCoordDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Cotes parall&egrave;les verticales</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Extensions&nbsp;: cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateVertCoordDimension.svg&amp;filetimestamp=20240707202244&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateVertCoordDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cotes parall&egrave;les verticales</b> du menu.</li></ul></li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Formater/organiser les cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateVertCoordDimension.svg&amp;filetimestamp=20240707202244&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateVertCoordDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cotes parall&egrave;les verticales</b> du menu.</li></ul></li>
 <li>Des cotes avec des textes de cotes centr&eacute;s sont cr&eacute;&eacute;es.</li></ol>
-</div>
 <p><br>
 </p>
 <div class="docnav">
@@ -115,35 +113,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125104350
+Cached time: 20260125104428
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.081 seconds
-Real time usage: 0.173 seconds
-Preprocessor visited node count: 379/1000000
-Post&#8208;expand include size: 27175/2097152 bytes
-Template argument size: 10913/2097152 bytes
+CPU time usage: 0.094 seconds
+Real time usage: 0.124 seconds
+Preprocessor visited node count: 378/1000000
+Post&#8208;expand include size: 27185/2097152 bytes
+Template argument size: 10923/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1419/5000000 bytes
+Unstrip post&#8208;expand size: 1423/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   58.927      1 -total
- 18.17%   10.709      1 Template:Value
- 17.59%   10.367      1 Template:TechDraw_Tools_navi/fr
- 14.95%    8.807      1 Template:Version/fr
-  9.48%    5.588      1 Template:Userdocnavi/fr
-  9.34%    5.504      3 Template:MenuCommand
-  8.74%    5.150      2 Template:Navigation_menu_2
-  8.52%    5.023      1 Template:Incode
-  6.67%    3.929      2 Template:Docnav/fr
-  6.21%    3.661      1 Template:GuiCommand/fr
+100.00%   29.257      1 -total
+ 24.51%    7.171      1 Template:TechDraw_Tools_navi/fr
+ 20.41%    5.972      2 Template:Navigation_menu_2
+ 11.66%    3.412      1 Template:Userdocnavi/fr
+ 11.45%    3.350      1 Template:Value
+  9.66%    2.825      1 Template:VersionMinus/fr
+  8.64%    2.527      3 Template:MenuCommand
+  8.40%    2.458      2 Template:Docnav/fr
+  8.37%    2.448      1 Template:GuiCommand/fr
+  4.85%    1.418      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277885-0!canonical and timestamp 20260125104349 and revision id 1743744. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277885-0!canonical and timestamp 20260125104427 and revision id 1743753. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
