--- a/wiki/fr/TechDraw_ExtensionCreateObliqueCoordDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCreateObliqueCoordDimension.html
@@ -51,10 +51,10 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<p>L'outil <b>TechDraw Cotes parall&egrave;les inclin&eacute;es</b> cr&eacute;e des cotes inclin&eacute;es&nbsp;: plusieurs cotes r&eacute;guli&egrave;rement espac&eacute;es partant de la m&ecirc;me ligne de base.
+<p>L'outil <b>TechDraw Cotes parall&egrave;les inclin&eacute;es</b> cr&eacute;e des cotes de coordonn&eacute;es inclin&eacute;es&nbsp;: plusieurs cotes r&eacute;guli&egrave;rement espac&eacute;es partant de la m&ecirc;me ligne de base.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateObliqueCoordDimensionExample.png&amp;filetimestamp=20220127153632&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateObliqueCoordDimensionExample.png" decoding="async" width="400" height="257" class="mw-file-element" data-file-width="765" data-file-height="491"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">A droite, les cotes cr&eacute;&eacute;es</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">&Agrave; droite, les cotes cr&eacute;&eacute;es</p>
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
@@ -116,15 +116,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125104818
+Cached time: 20260125105024
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.088 seconds
-Real time usage: 0.121 seconds
+CPU time usage: 0.112 seconds
+Real time usage: 0.176 seconds
 Preprocessor visited node count: 379/1000000
-Post&#8208;expand include size: 27152/2097152 bytes
-Template argument size: 10897/2097152 bytes
+Post&#8208;expand include size: 27154/2097152 bytes
+Template argument size: 10898/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -132,19 +132,19 @@ Unstrip post&#8208;expand size: 1435/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.704      1 -total
- 20.25%    7.432      1 Template:TechDraw_Tools_navi/fr
- 15.26%    5.601      2 Template:Navigation_menu_2
- 13.44%    4.934      1 Template:Value
- 11.55%    4.241      1 Template:Userdocnavi/fr
-  9.92%    3.640      2 Template:Docnav/fr
-  8.47%    3.107      1 Template:GuiCommand/fr
-  8.23%    3.021      1 Template:Caption
-  7.27%    2.669      3 Template:MenuCommand
-  7.11%    2.608      1 Template:VersionMinus/fr
+100.00%   33.421      1 -total
+ 28.55%    9.541      1 Template:TechDraw_Tools_navi/fr
+ 24.85%    8.305      2 Template:Navigation_menu_2
+ 20.28%    6.779      1 Template:Userdocnavi/fr
+  9.50%    3.174      1 Template:Value
+  6.87%    2.297      3 Template:MenuCommand
+  6.67%    2.229      2 Template:Docnav/fr
+  6.61%    2.209      1 Template:GuiCommand/fr
+  6.42%    2.146      1 Template:Caption
+  4.64%    1.550      1 Template:Version/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278073-0!canonical and timestamp 20260125104817 and revision id 1743761. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278073-0!canonical and timestamp 20260125105024 and revision id 1743765. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
