--- a/wiki/fr/TechDraw_ExtensionCreateObliqueCoordDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCreateObliqueCoordDimension.html
@@ -120,8 +120,8 @@ Cached time: 20260125105024
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.112 seconds
-Real time usage: 0.176 seconds
+CPU time usage: 0.092 seconds
+Real time usage: 0.133 seconds
 Preprocessor visited node count: 379/1000000
 Post&#8208;expand include size: 27154/2097152 bytes
 Template argument size: 10898/2097152 bytes
@@ -132,19 +132,19 @@ Unstrip post&#8208;expand size: 1435/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.421      1 -total
- 28.55%    9.541      1 Template:TechDraw_Tools_navi/fr
- 24.85%    8.305      2 Template:Navigation_menu_2
- 20.28%    6.779      1 Template:Userdocnavi/fr
-  9.50%    3.174      1 Template:Value
-  6.87%    2.297      3 Template:MenuCommand
-  6.67%    2.229      2 Template:Docnav/fr
-  6.61%    2.209      1 Template:GuiCommand/fr
-  6.42%    2.146      1 Template:Caption
-  4.64%    1.550      1 Template:Version/fr
+100.00%   40.944      1 -total
+ 29.56%   12.102      1 Template:TechDraw_Tools_navi/fr
+ 25.29%   10.353      2 Template:Navigation_menu_2
+  9.95%    4.075      1 Template:Value
+  9.51%    3.894      1 Template:Userdocnavi/fr
+  9.45%    3.870      1 Template:Version/fr
+  8.52%    3.489      1 Template:Caption
+  8.42%    3.449      1 Template:GuiCommand/fr
+  7.81%    3.198      3 Template:MenuCommand
+  6.52%    2.669      2 Template:Docnav/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278073-0!canonical and timestamp 20260125105024 and revision id 1743765. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278073-0!canonical and timestamp 20260125105024 and revision id 1743765. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
